Closed
Bug 741158
Opened 14 years ago
Closed 13 years ago
"Always load remote content from ..." fails to work with Thunderbird on OS X (Picks up contact from OS X address book, rather than local)
Categories
(Thunderbird :: Message Reader UI, defect)
Tracking
(thunderbird24 fixed, thunderbird25 fixed)
RESOLVED
FIXED
Thunderbird 26.0
People
(Reporter: matt.bugreport, Assigned: mkmelin)
Details
(Whiteboard: [str in comment 5])
Attachments
(1 file)
|
1.37 KB,
patch
|
standard8
:
review+
standard8
:
feedback+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:11.0) Gecko/20100101 Firefox/11.0
Build ID: 20120312181643
Steps to reproduce:
When I receive a message with remote content, I get the usual warning: "To protect your privacy, Thunderbird has blocked remote content in this message.", with the link: "always load remote content from user@xyz.com" underneath, and the "Show Remote Content" button to the right. I then click on the link to allow remote content to be always displayed for the email address.
Actual results:
Upon clicking the link, you see the warning attempt to disappear, but then it returns and remote content isn't displayed. If you click the button on the right, "Show Remote Content" on a message by message basis, it is functioning properly.
Expected results:
Upon clicking the link to "Always show remote content from ...", the warning message should go away, the email address should be added to the address book and tagged to display remote content. This issue began directly after installing Thunderbird version 11, and was tested on OS X 10.6.x Snow Leopard, OS X 10.7.3 Lion, and Windows Vista Ultimate. The bug is only present in the OS X versions of the software, The MS Windows version works as it should. The bug is always reproducible on OS X and is present when operating Thunderbird 11.0 and 11.01 in safe mode.
| Reporter | ||
Comment 1•14 years ago
|
||
Okay, some additional information here. Over the night I received some messages that I was able to click on the link to always show remote content and it did work properly, so I've done some comparisons in the messages to attempt to isolate what is causing the issue. I haven't been able to isolate what is causing some of the messages to not allow this to work properly. I did find that the clicking the "Always show remote.." link in the messages that don't work will add the address to the address book in these messages, but it still won't display the remote content and won't bring up the address add dialog screen as it is supposed to. I've deleted the address book entries and attempted to click on the "Always show remote content..." link again, and it will again add the address to the book, but will not bring up the dialog box or show the remote content.
If it will help to have the message source of a message that won't allow me to click the link, let me know and I'll sterilize it and attach it.
Comment 2•14 years ago
|
||
(In reply to ChiefPoints from comment #1)
Do you see similarities with bug 528712 ?
| Reporter | ||
Comment 3•14 years ago
|
||
@Hashem Masoud: It's concerning the same function as bug 528712, but I believe that bug is more of a feature request asking for it to remember your last choice (as it should). In my case, you can't get it to ever bring up the Add To dialog box. This appears to of been introduced in ver 11 for OS X, as I didn't have this issue with previous versions, including the MS Windows version. I've tested the windows versions with the same messages that the OS X version mishandles, and it handles them fine.
Comment 4•14 years ago
|
||
Same in 12.0.1 on Ubuntu 12.04
Link "always load remote content from ..." doesn't work, just clicking on it do nothing.
In previous version opens contact details with check box with the same option.
Now even this check box not exist in contact details.
Hi gang,
I've got some detail on this - I also have been getting this problem on Mac OSX Thunderbird (17.0.7), but it was only happening with people I knew really well, so that was odd... Eventually I figured it out - it's picking up my Mac "Contacts", which of course is shared with my iPhone and everything. Apparently the "always load remote content" link doesn't work because the iPhone contacts are read-only, and it's trying to make the change there.
As an experiment, I went into Contacts and removed the email address from my wife's contact page. I then relaunched Thunderbird, and immediately was able to see pictures in emails she sent me. (So, hm, that means that the "always load remote content" button was _setting_ the value in the correct address book record, but the email display was _reading_ the value from the Mac OSX address book instead.)
I hope this helps you find a solution for the next point release - this is sort of OK, but it means that I don't have email addresses in my iPhone. Is there maybe a way to disconnect the Mac OSX address book from Thunderbird completely?
Bug 528735 suggests that we fix this by always loading remote content from all Mac OS Address book contacts. I think this would be a fine idea. Or at least a fine option.
Comment 7•13 years ago
|
||
Thanks Apollo. Confirming based on your comment 5, as I can certainly see how that would happen.
As a workaround, you can open up the address book window, go to the File menu, and unselect "Use Mac OS X Address Book".
Status: UNCONFIRMED → NEW
Ever confirmed: true
Hardware: x86 → All
Summary: "Always load remote content from ..." fails to work with Thunderbird on OS X → "Always load remote content from ..." fails to work with Thunderbird on OS X (Picks up contact from OS X address book, rather than local)
Whiteboard: [str in comment 5]
Comment 8•13 years ago
|
||
I can see two potential ways to fix this:
1) Change nsMsgContentPolicy::ShouldAcceptRemoteContentForSender to not look in read-only address books.
2) Make an OS X version of GetPropertyAsBool which throws NS_ERROR_NOT_AVAILABLE when getting the remote content attribute. Update nsMsgContentPolicy to detect it.
I think I'm in slight preference of 1, as if its read-only, then we're never going to be able to set the user option.
Keywords: helpwanted
| Assignee | ||
Comment 9•13 years ago
|
||
I suppose this would be option 1) - someone with a mac should probably test and drive it in...
I'm a bit confused though - we had 465577 which looks like its still in tree...
Comment 10•13 years ago
|
||
Comment on attachment 795031 [details] [diff] [review]
possible fix
A quick glance and this looks reasonable to do and feels like the right patch. I haven't tested it yet though.
Bug 465577 probably didn't pick the up on this as that was just about adding the flag rather than reading it.
Attachment #795031 -
Flags: feedback+
Comment 11•13 years ago
|
||
Comment on attachment 795031 [details] [diff] [review]
possible fix
I've just tested this and it works fine and does the right things.
+ // If read-only, the remote content property wouldn't be set, so bail.
I would say, "Read-only ABs, don't support the remote content property, so skip this one".
r=Standard8 with that fixed.
Please also nominate for aurora/beta once this lands, I think it would be good to land for TB 24.
Attachment #795031 -
Flags: review+
| Assignee | ||
Comment 12•13 years ago
|
||
Assignee: nobody → mkmelin+mozilla
Status: NEW → RESOLVED
Closed: 13 years ago
Keywords: helpwanted
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 26.0
| Assignee | ||
Updated•13 years ago
|
Attachment #795031 -
Flags: approval-comm-beta?
Attachment #795031 -
Flags: approval-comm-aurora?
Comment 13•13 years ago
|
||
Is this safe to take for 24? We're coming up on the cutoff.
Flags: needinfo?(mbanner)
Updated•13 years ago
|
Attachment #795031 -
Flags: approval-comm-beta?
Attachment #795031 -
Flags: approval-comm-beta+
Attachment #795031 -
Flags: approval-comm-aurora?
Attachment #795031 -
Flags: approval-comm-aurora+
Updated•13 years ago
|
Flags: needinfo?(mbanner)
Comment 14•13 years ago
|
||
https://hg.mozilla.org/releases/comm-aurora/rev/1219ee86cf3a
https://hg.mozilla.org/releases/comm-beta/rev/2bb1ce0050b7
status-thunderbird24:
--- → fixed
status-thunderbird25:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•