Bug 741158 - "Always load remote content from ..." fails to work with Thunderbird on OS X (Picks up contact from OS X address book, rather than local) r=standard8, a=RyanVM